fix: horizontal scroll 520px

--- a/blocks/footer/__link-item/footer__link-item.css
+++ b/blocks/footer/__link-item/footer__link-item.css
@@ -6,7 +6,7 @@
   margin-right: 0;
 }
 
-@media screen and (max-width: 520px) {
+@media screen and (max-width: 530px) {
   .footer__link-item {
     margin: 0 0 32px;
   }
