--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -12,7 +12,7 @@
   opacity: 0.8;
 }
 
-@media screen and (max-width: 520px) {
+@media screen and (max-width: 530px) {
   .footer__link {
     font-size: 24px;
     line-height: 1;
