--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -11,7 +11,7 @@
   }
 }
 
-@media screen and (max-width: 520px) {
+@media screen and (max-width: 530px) {
   .footer__links {
     flex-direction: column;
     margin-bottom: 48px;
