--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -24,7 +24,7 @@
   }
 }
 
-@media screen and (max-width: 520px) {
+@media screen and (max-width: 530px) {
   .footer {
     flex-direction: column;
     align-items: start;
